# online-doc

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  CLAUDE.md  README.md  docker-compose.yml
.specify/memory/: constitution.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 19a0a3dba50a_add_document_model.py  399e38e0fd8a_add_editsession_and_change_models_for_.py  9209d8fae689_initial_schema_user.py  edf1281af45a_add_documentaccess_model.py
backend/src/: main.py
backend/src/api/: router.py
backend/src/api/routes/: documents.py  sharing.py  users.py
backend/src/api/websocket/: __init__.py  handler.py
backend/src/core/: config.py
backend/src/db/: session.py
backend/src/middleware/: auth.py
backend/src/models/: __init__.py  collaboration.py  document.py  document_access.py  user.py
backend/src/schemas/: document.py  sharing.py  user.py
backend/src/services/: auth_service.py  collaboration_service.py  document_service.py  sharing_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_documents.py  test_sharing.py
backend/tests/integration/: test_document_flow.py  test_sharing_flow.py  test_websocket.py
backend/tests/unit/: test_document_service.py
backend/tests/utils/: document.py  user.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/services/: api.ts  collaboration.ts  documentService.ts
frontend/src/types/: document.ts  sharing.ts
frontend/tests/e2e/: collaboration.spec.ts  (+2 more)
specs/001-build-an-simple/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+8 files in other folders)
