[project]
name = "backend"
version = "0.1.0"
description = "Backend for the online collaborative document system."
authors = [{name = "Gemini", email = "gemini@google.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg",
    "psycopg2-binary",
    "pytest",
    "requests",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pydantic-settings",
    "pydantic[email]",
    "redis",
    "openapi-spec-validator",
    "aiosqlite",
    "httpx",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104", "D105", "D107"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
